--- a/app/vercel.json
+++ b/app/vercel.json
@@ -1,5 +1,4 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ]
+  "buildCommand": "cd app && npm install && npm run build",
+  "outputDirectory": "app/dist"
 }
